<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/green"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_baseline_grass_24"
            android:layout_gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/login_to_the_smart_farmer_app"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/green"
        app:hintEnabled="true"
        android:hint="@string/input_user_email">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/userEmailInput"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/green"
        app:hintEnabled="true"
        android:hint="@string/input_password"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/green"
        app:counterTextAppearance="@style/TextAppearance.MaterialComponents.Headline6">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:id="@+id/userPasswordEdit"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:id="@+id/login"
            android:padding="15dp"/>

        <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="end"
        android:layout_margin="10dp"
            app:backgroundTint="@color/pale_dark"
        android:id="@+id/register"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:padding="15dp"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        android:text="@string/forgot_password_click_here_to_reset"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/green"
        android:id="@+id/resetPassword"/>

</LinearLayout>