<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginBottom="20dp"
        android:text="@string/create_a_new_season"
            android:id="@+id/header"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintEnabled="true"
            android:layout_below="@+id/header"
            android:hint="@string/input_number_of_farms"
            app:boxStrokeColor="@color/green"
            android:id="@+id/nFarms">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nFarmsInput"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintEnabled="true"
            android:id="@+id/size"
            android:layout_below="@+id/nFarms"
            android:layout_marginTop="10dp"
            android:hint="@string/input_the_size_of_the_farms"
            app:boxStrokeColor="@color/green">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sizeInput"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintEnabled="true"
            android:id="@+id/stock"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/size"
            android:hint="@string/input_harvested_stock"
            app:boxStrokeColor="@color/green">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/stockInput"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/save"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>