<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    >
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:padding="10dp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/number_of_farms"
           android:fontFamily="@font/britannic"
           android:id="@+id/nFarms"
           android:textSize="22sp"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/green"
           android:text="@string/_12"
           android:layout_toEndOf="@+id/nFarms"
           android:textSize="22sp"
           android:fontFamily="@font/britannic"
           android:id="@+id/nFarmsValue"
           android:layout_marginStart="10dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/farm_size"
           android:fontFamily="@font/britannic"
           android:id="@+id/size"
           android:layout_below="@+id/nFarms"
           android:layout_marginTop="10dp"
           android:textSize="22sp"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/green"
           android:text="@string/_12"
           android:layout_toEndOf="@+id/size"
           android:layout_below="@+id/nFarmsValue"
           android:textSize="22sp"
           android:fontFamily="@font/britannic"
           android:id="@+id/sizeValue"
           android:layout_marginTop="10dp"
           android:layout_marginStart="10dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/harvested_stock"
           android:fontFamily="@font/britannic"
           android:id="@+id/stock"
           android:layout_below="@+id/size"
           android:layout_marginTop="10dp"
           android:textSize="22sp"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/green"
           android:text="@string/_12"
           android:layout_toEndOf="@+id/stock"
           android:textSize="22sp"
           android:layout_below="@+id/sizeValue"
           android:fontFamily="@font/britannic"
           android:id="@+id/stockValue"
           android:layout_marginTop="10dp"
           android:layout_marginStart="10dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/current_stage"
           android:fontFamily="@font/britannic"
           android:id="@+id/stage"
           android:layout_below="@+id/stock"
           android:layout_marginTop="10dp"
           android:textSize="22sp"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/green"
           android:text="@string/_12"
           android:layout_toEndOf="@+id/stage"
           android:textSize="22sp"
           android:layout_below="@+id/stockValue"
           android:fontFamily="@font/britannic"
           android:id="@+id/stageValue"
           android:layout_marginTop="10dp"
           android:layout_marginStart="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:visibility="gone"
           android:id="@+id/seasonId"/>
   </RelativeLayout>

</androidx.cardview.widget.CardView>