<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PasswordFragment">

   <include
       layout="@layout/register_header"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/green"
        app:hintEnabled="true"
        app:counterEnabled="true"
        app:counterTextColor="@color/green"
        app:counterMaxLength="16"
        app:counterTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:hint="@string/input_password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:id="@+id/userPasswordEdit"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/green"
        app:hintEnabled="true"
        android:hint="@string/confirm_password"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/green"
        app:counterTextAppearance="@style/TextAppearance.MaterialComponents.Headline6">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:id="@+id/userPasswordConfirmEdit"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:id="@+id/next"
        android:padding="15dp"/>

</LinearLayout>